Avoid layout breaking if editor has more than a screenful of content.

--- a/src/style.css
+++ b/src/style.css
@@ -88,12 +88,16 @@ body {
 
 #split-container {
   width: 100%;
-  height: 100%;
+  flex: 1;
+  min-height: 0;  /* Important for nested flex! */
   display: flex;
 }
 
 #editor-pane {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;  /* Important for nested flex! */
   background: #1e1e1e;
 }
 
